--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorSecondary">#9966CB</color>
+    <color name="colorPrimary">#694091</color>
+    <color name="colorLight">#DBC7ED</color>
 </resources>
