--- a/app/src/main/res/layout/fragment_image_list.xml
+++ b/app/src/main/res/layout/fragment_image_list.xml
@@ -13,6 +13,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:navigationIcon="@drawable/baseline_arrow_back_24"
         app:titleTextColor="@color/white" />
 
     <androidx.recyclerview.widget.RecyclerView
